'Message contains'-search broken in 3.36.3
With the update to evolution 3.36.3, the "Message contains" search no longer works as expected. As @mcrha mentioned on the evolution-mailinglist, this should be related to the search optimizations he introduced in #821 (closed).
Steps to reproduce
Search the current folder with the panel above the message list and search by "Message contains" in "Current folder".
Using evolution-3.36.3:
- online (evolution-ews): searching by "Message contains" takes ages. I don't know if it finishes sometime.
- offline (evolution-ews): searching by "Message contains" in a folder with ~20.000 messages takes ~30 seconds.
Using evolution-3.36.1:
- online: searching by "Message contains" in a folder with ~20.000 messages takes ~2 seconds.
I have not checked to what extent the search in the "mail body" is affected.
Edited by Milan Crha