I#982 - 'Message contains'-search broken in 3.36.3

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/982